[project]
name = "bocha-search-mcp"
version = "0.0.1"
description = "Bocha Search MCP Server - official release with fixed dependencies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
[[project.authors]]
name = "kunkun"
email = "kunkun@1998.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
bocha-search-mcp = "bocha_search_mcp:main"
